--- a/pages/customer.html
+++ b/pages/customer.html
@@ -483,8 +483,8 @@
             </div>
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-1">Email / Contact</label>
-              <input type="email" id="profile-email"
-                class="w-full border border-brown-light/50 rounded-lg px-4 py-2 focus:ring-2 focus:ring-brown outline-none">
+              <input type="email" id="profile-email" placeholder="e.g. user@bookstore.com"
+                class="w-full border border-brown-light/50 rounded-lg px-4 py-2 focus:ring-2 focus:ring-brown outline-none transition-all">
             </div>
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-1">New Password</label>
