--- a/pages/manager.html
+++ b/pages/manager.html
@@ -688,7 +688,7 @@
                                         Position</th>
                                     <th
                                         class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Phone</th>
+                                        Email</th>
                                     <th
                                         class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                         Actions</th>
@@ -746,13 +746,13 @@
                                                 id="staff-last-name" required>
                                         </div>
 
-                                        <!-- Phone Number -->
+                                        <!-- Email -->
                                         <div>
                                             <label class="block text-sm font-medium text-gray-700 mb-1">
-                                                Phone Number <span class="text-red-500">*</span>
+                                                Email <span class="text-red-500">*</span>
                                             </label>
-                                            <input type="tel" class="form-input" placeholder="Enter phone number"
-                                                id="phone-number" required>
+                                            <input type="email" class="form-input" placeholder="Enter email address"
+                                                id="staff-email" required>
                                         </div>
 
                                         <!-- Job Title -->
@@ -869,13 +869,13 @@
                                             </select>
                                         </div>
 
-                                        <!-- Phone -->
+                                        <!-- Email -->
                                         <div>
                                             <label class="block text-sm font-medium text-gray-700 mb-1">
-                                                Phone Number <span class="text-red-500">*</span>
+                                                Email <span class="text-red-500">*</span>
                                             </label>
-                                            <input type="tel" class="form-input" placeholder="Enter phone number"
-                                                id="edit-phone" required>
+                                            <input type="email" class="form-input" placeholder="Enter email address"
+                                                id="edit-email" required>
                                         </div>
                                     </div>
 
@@ -956,7 +956,7 @@
                                     </th>
                                     <th
                                         class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Phone
+                                        Email
                                     </th>
                                     <th
                                         class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -1181,7 +1181,7 @@
                                         </th>
                                         <th
                                             class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                            Phone
+                                        Email
                                         </th>
                                         <th
                                             class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
