恢复图书卡点击，搜索页筛选完自动更新。

--- a/pages/customer.html
+++ b/pages/customer.html
@@ -87,12 +87,12 @@
         </div>
         <!-- 顶部轮播 -->
         <div class="relative h-64 md:h-80 mb-10 rounded-xl overflow-hidden shadow-md">
-          <img src="https://picsum.photos/id/24/1200/400" alt="Membership Promotion" class="w-full h-full object-cover">
+          <img src="../assets/images/customer-home-bg.jpg" alt="Membership Promotion" class="w-full h-full object-cover">
           <div class="absolute inset-0 bg-brown-dark/50 flex items-center">
             <div class="px-8 text-white">
               <h2 class="text-3xl font-bold mb-2">Members Exclusive: 20% Off</h2>
               <p class="mb-4">From now until October 31, Gold Members and above enjoy 20% off all books</p>
-              <button
+              <button id="learn-more-btn"
                 class="bg-brown-light text-brown-dark px-6 py-2 rounded-md font-medium hover:bg-white transition-colors">
                 Learn More
               </button>
