--- a/pages/finance.html
+++ b/pages/finance.html
@@ -288,7 +288,7 @@
                             Management</h2>
                         <p class="text-gray-500">Manage and track all invoices</p>
                     </div>
-                    <div class="mt-4 md:mt-0 flex flex-col sm:flex-row gap-3">
+                    <div class="mt-4 md:mt-0 flex flex-col sm:flex-row gap-3 justify-end">
                         <div class="relative w-full sm:w-auto">
                             <input type="text" placeholder="Search invoices..." id="invoice-search"
                                 class="w-full sm:w-64 px-4 py-2 pl-12 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#8B5A2B]/30 focus:border-[#8B5A2B] outline-none transition-all">
@@ -296,10 +296,7 @@
                                 <i class="fa fa-search"></i>
                             </span>
                         </div>
-                        <button class="btn-primary flex items-center justify-center gap-2 w-full sm:w-auto"
-                            id="create-invoice-btn">
-                            <i class="fa fa-plus"></i> Create Invoice
-                        </button>
+
                     </div>
                 </div>
 
@@ -414,11 +411,10 @@
             <div id="order-page" class="page-content hidden">
                 <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
                     <div>
-                        <h2 class="text-[clamp(1.5rem,3vw,2rem)] font-serif font-bold text-gray-800">Order
-                            Management</h2>
+                        <h2 class="text-[clamp(1.5rem,3vw,2rem)] font-serif font-bold text-gray-800">Order Management</h2>
                         <p class="text-gray-500">Manage and track all customer orders</p>
                     </div>
-                    <div class="mt-4 md:mt-0 flex flex-col sm:flex-row gap-3">
+                    <div class="mt-4 md:mt-0">
                         <div class="relative w-full sm:w-auto">
                             <input type="text" placeholder="Search orders..." id="order-search"
                                 class="w-full sm:w-64 px-4 py-2 pl-12 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#8B5A2B]/30 focus:border-[#8B5A2B] outline-none transition-all">
@@ -426,24 +422,18 @@
                                 <i class="fa fa-search"></i>
                             </span>
                         </div>
-                        <button class="btn-primary flex items-center justify-center gap-2 w-full sm:w-auto"
-                            id="refresh-orders-btn">
-                            <i class="fa fa-refresh"></i> Refresh
-                        </button>
                     </div>
                 </div>
 
-                <!-- 修复的筛选区域 -->
-                <div class="card mb-6">
+                <div class="card mb-6 border border-gray-100">
                     <h3 class="font-semibold text-lg mb-4">Filter Criteria</h3>
                     <div class="space-y-4">
-                        <!-- 第一行：日期范围和状态筛选 -->
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-1">Date Range</label>
                                 <div class="flex gap-2 items-center">
                                     <input type="date" class="form-input flex-1" id="order-date-from" lang="en">
-                                    <span class="text-gray-500 text-sm whitespace-nowrap">to</span>
+                                    <span class="text-gray-500 text-sm">to</span>
                                     <input type="date" class="form-input flex-1" id="order-date-to" lang="en">
                                 </div>
                             </div>
@@ -452,38 +442,35 @@
                                 <select class="form-input w-full" id="order-status-filter">
                                     <option value="">All Statuses</option>
                                     <option value="created">Created</option>
-                                    <option value="processing">Processing</option>
                                     <option value="paid">Paid</option>
-                                    <option value="completed">Completed</option>
+                                    <option value="cancelled">Cancelled</option>
+                                    <option value="refunded">Refunded</option>
+                                    <option value="finished">Finished</option>
                                 </select>
                             </div>
                         </div>
 
-                        <!-- 第二行：门店筛选和操作按钮 -->
-                        <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                            <div>
-                                <label class="block text-sm font-medium text-gray-700 mb-1">Store</label>
-                                <select class="form-input w-full" id="order-store-filter">
-                                    <option value="">All Stores</option>
-                                    <option value="STORE-001">New York Store</option>
-                                    <option value="STORE-002">Boston Store</option>
-                                    <option value="STORE-003">Chicago Store</option>
-                                </select>
+                        <div class="grid grid-cols-1 md:grid-cols-12 gap-4 items-end">
+                            <div class="md:col-span-6">
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Order ID</label>
+                                <input type="text" placeholder="Order ID" id="order-id-input"
+                                    class="form-input w-full px-4 py-2 border border-gray-300 rounded-lg" style="color: #6B7280;">
                             </div>
-                            <div class="md:col-span-2">
+                            <div class="md:col-span-6">
                                 <label class="block text-sm font-medium text-gray-700 mb-1">Actions</label>
-                                <div class="flex gap-2">
-                                    <button class="btn-primary flex-1 py-2" id="order-search-btn">
-                                        <i class="fa fa-search mr-2"></i>Search
+                                <div class="flex gap-3">
+                                    <button class="btn-primary flex-1 py-2 flex items-center justify-center gap-2" id="order-search-btn">
+                                        <i class="fa fa-search"></i> Search
                                     </button>
-                                    <button class="btn-secondary flex-1 py-2" id="order-reset-btn">
-                                        <i class="fa fa-refresh mr-2"></i>Reset
+                                    <button class="btn-secondary flex-1 py-2 flex items-center justify-center gap-2" id="order-reset-btn">
+                                        <i class="fa fa-refresh"></i> Reset
                                     </button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                
 
                 <!-- 表格部分保持不变 -->
                 <div class="card">
@@ -496,9 +483,6 @@
                                         Order ID</th>
                                     <th
                                         class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Store</th>
-                                    <th
-                                        class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                         Customer</th>
                                     <th
                                         class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -507,9 +491,9 @@
                                         class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                         Order Date</th>
                                     <!-- 注意：这里缺少了"Payable Amount"列，需要根据实际需求添加 -->
-                                    <th
+                                    <th                                    <th
                                         class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Notes</th>
+                                        Amount</th>
                                     <th
                                         class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider rounded-tr-lg">
                                         Actions</th>
@@ -564,6 +548,11 @@
             // 4. 加载页面特定内容 (图表等)
             // 延迟一点点，确保 DOM 已经由 layout.js 渲染完毕
             setTimeout(() => {
+                
+                //不再直接 initFinancePage，而是通过 Session 初始化
+                if (typeof initFinanceSession === 'function') {
+                    initFinanceSession();
+                }   
                 // 恢复之前的页面状态
                 const lastPage = sessionStorage.getItem('currentPage') || 'income-stats';
 
