--- a/pages/finance.html
+++ b/pages/finance.html
@@ -244,14 +244,7 @@
                             Overview Dashboard</h2>
                         <p class="text-gray-500">Analyze total financial condition</p>
                     </div>
-                    <div class="mt-4 md:mt-0 flex gap-3">
-                        <button class="btn-secondary flex items-center gap-2">
-                            <i class="fa fa-calendar"></i> Export Report
-                        </button>
-                        <button class="btn-primary flex items-center gap-2">
-                            <i class="fa fa-download"></i> Download Data
-                        </button>
-                    </div>
+                    
                 </div>
 
                 <!-- Total Revenue Card -->
@@ -261,7 +254,7 @@
 
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
                     <div class="card">
-                        <h3 class="font-semibold text-lg mb-4">Revenue by Payment Method</h3>
+                        <h3 class="font-semibold text-lg mb-4">Payment Method</h3>
                         <div class="pie-chart-wrapper">
                             <canvas id="payment-method-pie-chart" class="chart-responsive"></canvas>
                         </div>
