--- a/pages/finance.html
+++ b/pages/finance.html
@@ -76,7 +76,8 @@
             .chart-container {
                 position: relative;
                 width: 100%;
-                height: 100%;
+            /*    height: 100%;*/
+                height: 320px;
             }
             
             /* 响应式图表高度 */
