--- a/pages/staff.html
+++ b/pages/staff.html
@@ -224,9 +224,17 @@
                             </select>
                         </div>
                     </div>
-                    <div class="flex justify-end mt-4 gap-2">
-                        <button id="filter-inventory" class="btn-primary">Apply Filters</button>
-                        <button id="reset-inventory" class="btn-secondary">Reset</button>
+                    <div class="flex justify-between items-center mt-4">
+                        <div class="flex items-center gap-2">
+                            <input type="checkbox" id="hide-zero-stock"
+                                class="w-4 h-4 text-primary border-gray-300 rounded focus:ring-primary">
+                            <label for="hide-zero-stock" class="text-sm text-gray-700">Hide items with zero
+                                stock</label>
+                        </div>
+                        <div class="flex gap-2">
+                            <button id="filter-inventory" class="btn-primary">Apply Filters</button>
+                            <button id="reset-inventory" class="btn-secondary">Reset</button>
+                        </div>
                     </div>
                 </div>
 
@@ -277,18 +285,46 @@
             <!-- C. Order Processing Page -->
             <div id="orders-page" class="page-content hidden">
                 <div class="flex flex-col md:flex-row md:justify-between md:items-center mb-6 gap-4">
-                    <h1 class="text-2xl font-bold">Order Processing</h1>
-                    <div class="flex gap-2 flex-wrap">
+                    <div>
+                        <h1 class="text-2xl font-bold">Order Management</h1>
+                        <p class="text-gray-500">Manage and track all customer orders</p>
+                    </div>
+                    <div class="flex gap-2">
                         <div class="relative">
-                            <input type="text" placeholder="Search orders..." class="form-input pl-10 w-full md:w-64">
+                            <input type="text" id="order-search" placeholder="Search orders..." class="form-input pl-10 w-full md:w-64">
                             <i class="fa fa-search absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
                         </div>
-                        <select class="form-input" id="order-status-filter">
-                            <option value="">All Statuses</option>
-                            <option value="created">Created</option>
-                            <option value="paid">Paid</option>
-                            <option value="cancelled">Cancelled</option>
-                        </select>
+                        <button id="refresh-orders" class="btn-primary bg-brown-dark hover:bg-brown-dark/90 border-none">
+                            <i class="fa fa-refresh mr-2"></i>Refresh
+                        </button>
+                    </div>
+                </div>
+
+                <div class="card mb-6">
+                    <h3 class="text-lg font-semibold mb-4">Filter Criteria</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Date Range</label>
+                            <div class="flex items-center gap-2">
+                                <input type="date" id="order-date-from" class="form-input">
+                                <span class="text-gray-500">to</span>
+                                <input type="date" id="order-date-to" class="form-input">
+                            </div>
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Order Status</label>
+                            <select id="order-status-filter" class="form-input">
+                                <option value="">All Statuses</option>
+                            </select>
+                        </div>
+                        <div class="flex items-end gap-2">
+                            <button id="apply-order-filters" class="btn-primary flex-1 bg-brown-dark hover:bg-brown-dark/90 border-none">
+                                <i class="fa fa-search mr-2"></i>Search
+                            </button>
+                            <button id="reset-order-filters" class="btn-secondary flex-1">
+                                <i class="fa fa-refresh mr-2"></i>Reset
+                            </button>
+                        </div>
                     </div>
                 </div>
 
@@ -432,11 +468,6 @@
                             <input type="text" id="book-title" class="form-input" required>
                         </div>
                         <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-1" for="book-author">Author
-                                *</label>
-                            <input type="text" id="book-author" class="form-input" required>
-                        </div>
-                        <div>
                             <label class="block text-sm font-medium text-gray-700 mb-1" for="book-isbn">ISBN *</label>
                             <input type="text" id="book-isbn" class="form-input" required>
                         </div>
@@ -445,11 +476,6 @@
                                 *</label>
                             <select id="book-category" class="form-input" required>
                                 <option value="">Select Category</option>
-                                <option value="fiction">Fiction</option>
-                                <option value="non-fiction">Non-Fiction</option>
-                                <option value="science">Science</option>
-                                <option value="history">History</option>
-                                <option value="biography">Biography</option>
                             </select>
                         </div>
                         <div>
@@ -457,10 +483,50 @@
                             <input type="number" id="book-price" class="form-input" min="0" step="0.01" required>
                         </div>
                         <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-1" for="book-stock">Stock Quantity
+                            <label class="block text-sm font-medium text-gray-700 mb-1" for="book-language">Language *</label>
+                            <input type="text" id="book-language" class="form-input" placeholder="English" required>
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1" for="book-binding">Binding *</label>
+                            <select id="book-binding" class="form-input" required>
+                                <option value="">Select Binding</option>
+                                <option value="Hardcover">Hardcover</option>
+                                <option value="Paperback">Paperback</option>
+                                <option value="Mass Market Paperback">Mass Market Paperback</option>
+                            </select>
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1" for="book-stock">Initial Stock Quantity
                                 *</label>
                             <input type="number" id="book-stock" class="form-input" min="0" required>
                         </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1" for="book-publisher">Publisher *</label>
+                            <input type="text" id="book-publisher" class="form-input" placeholder="Publisher Name" required>
+                        </div>
+                    </div>
+
+                    <!-- Author Information -->
+                    <div class="border-t border-gray-100 pt-4 mt-4">
+                        <h4 class="text-sm font-semibold text-gray-600 mb-3">Author Information</h4>
+                        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">First Name *</label>
+                                <input type="text" id="book-author-first" class="form-input" placeholder="Mark" required>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Last Name *</label>
+                                <input type="text" id="book-author-last" class="form-input" placeholder="Twain" required>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Country</label>
+                                <input type="text" id="book-author-country" class="form-input" placeholder="USA">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-sm font-medium text-gray-700 mb-1" for="book-intro">Introduction</label>
+                        <textarea id="book-intro" class="form-input" rows="3" placeholder="Brief introduction of the book..."></textarea>
                     </div>
                     <div class="flex justify-end gap-2 mt-6">
                         <button type="button" id="cancel-book" class="btn-secondary">Cancel</button>
@@ -512,7 +578,13 @@
                 </div>
                 <div class="mb-2">
                     <label class="block text-sm font-semibold text-gray-500 uppercase mb-2">Order Status</label>
-                    <div id="detail-order-status-badge" class="inline-block px-3 py-1 rounded-full text-sm font-medium">
+                    <div class="flex items-center gap-3">
+                        <div id="detail-order-status-badge" class="inline-block px-3 py-1 rounded-full text-sm font-medium">
+                        </div>
+                        <select id="detail-order-status-select" class="form-input text-sm py-1 w-40">
+                            <!-- Dynamic statuses -->
+                        </select>
+                        <button onclick="updateOrderStatus()" class="btn-primary py-1 px-3 text-xs">Update</button>
                     </div>
                 </div>
             </div>
