--- a/pages/manager.html
+++ b/pages/manager.html
@@ -737,9 +737,9 @@
                                             <label class="block text-sm font-medium text-gray-700 mb-1">
                                                 Username <span class="text-red-500">*</span>
                                             </label>
-                                            <input type="text" class="form-input" placeholder="Enter username (emp001)"
-                                                pattern="emp\d{3}" title="Format: emp001" id="staff-username" required>
-                                            <p class="text-xs text-gray-500 mt-1">Format: emp001</p>
+                                            <input type="text" class="form-input" placeholder="emp001"
+                                                pattern="[eE][mM][pP]\d{3}" title="Format: emp001" id="staff-username" required>
+                                            <p class="text-xs text-gray-500 mt-1">Format: emp001 (Employee ID = 1)</p>
                                         </div>
 
                                         <!-- Password -->
@@ -1237,7 +1237,7 @@
                                     </th>
                                     <th
                                         class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Email
+                                        Phone
                                     </th>
                                     <th
                                         class="px-4 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -1496,8 +1496,6 @@
     <script src="../scripts/pagination-manager.js"></script>
     <!-- API Functions -->
     <script src="../scripts/manager-api.js"></script>
-    <!-- Mock Data (will be bypassed by API integration) -->
-    <script src="../scripts/manager-data.js"></script>
     <!-- Manager Logic -->
     <script src="../scripts/manager.js"></script>
     <!-- API Integration (overrides mock data functions, defines showMessage) -->
