--- a/pages/manager.html
+++ b/pages/manager.html
@@ -1399,6 +1399,28 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- View Supplier Modal -->
+                <div id="view-supplier-modal"
+                    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50 p-4">
+                    <div class="bg-white rounded-lg w-full max-w-2xl max-h-[90vh] overflow-y-auto">
+                        <div class="p-6">
+                            <div class="flex items-center justify-between mb-4">
+                                <h3 class="text-lg font-semibold text-gray-900">Supplier Details</h3>
+                                <button type="button" id="close-view-supplier"
+                                    class="text-gray-400 hover:text-gray-600 transition-colors">
+                                    <i class="fa fa-times text-xl"></i>
+                                </button>
+                            </div>
+                            <div id="view-supplier-content" class="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm">
+                                <!-- Filled by JavaScript -->
+                            </div>
+                            <div class="flex justify-end mt-6">
+                                <button type="button" id="close-view-supplier-footer" class="btn-secondary">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
