--- a/pages/staff.html
+++ b/pages/staff.html
@@ -86,9 +86,9 @@
                     <div class="card">
                         <p class="text-sm text-gray-500 mb-1">Low Stock Items</p>
                         <p class="text-2xl font-bold text-red-600" id="low-stock-books">0</p>
-                        <p class="text-sm text-red-600 mt-1 flex items-center">
-                            <i class="fa fa-exclamation-triangle mr-1"></i> Only 1 stock left
-                        </p>
+                          <p class="text-sm text-red-600 mt-1 flex items-center">
+                              <i class="fa fa-exclamation-triangle mr-1"></i> Low stock threshold: ≤ 5
+                          </p>
                     </div>
 
                     <div class="card">
