Revert "Merge branch 'main' of https://github.com/Liyiru0123/DiamondPageStore"
This reverts commit 1602bb4003f88dbe6ad06103985c2a4aa55e6344, reversing
changes made to ae3f3594ad662f5b71db5c83ab75ac2d8aa98100.

--- a/pages/customer.html
+++ b/pages/customer.html
@@ -117,12 +117,12 @@
         </div>
         <!-- 顶部轮播 -->
         <div class="relative h-64 md:h-80 mb-10 rounded-xl overflow-hidden shadow-md">
-          <img src="../assets/images/customer-home-bg.jpg" alt="Promotion" class="w-full h-full object-cover">
+          <img src="../assets/images/customer-home-bg.jpg" alt="Membership Promotion"
+            class="w-full h-full object-cover">
           <div class="absolute inset-0 bg-brown-dark/50 flex items-center">
             <div class="px-8 text-white">
-              <h2 id="home-banner-title" class="text-3xl font-bold mb-2">Loading News...</h2>
-              <p id="home-banner-text" class="mb-4 text-sm opacity-90">Please wait while we fetch the latest updates.
-              </p>
+              <h2 class="text-3xl font-bold mb-2">Members Exclusive: 15% Off</h2>
+              <p class="mb-4">From now until October 31, Gold Members and above enjoy 15% off all books</p>
               <button id="learn-more-btn"
                 class="bg-brown-light text-brown-dark px-6 py-2 rounded-md font-medium hover:bg-white transition-colors">
                 Learn More
@@ -538,11 +538,11 @@
         </div>
       </div>
 
-      <!-- 全部公告弹窗 -->
+      <!-- 历史公告弹窗 -->
       <div id="announcement-modal" class="fixed inset-0 bg-black/50 z-[60] hidden flex items-center justify-center">
         <div class="bg-white rounded-xl shadow-2xl w-full max-w-2xl max-h-[80vh] flex flex-col p-6">
           <div class="flex justify-between items-center mb-6 border-b border-brown-light/30 pb-3">
-            <h3 class="text-xl font-bold text-brown-dark"><i class="fa fa-bullhorn mr-2"></i>All Announcements
+            <h3 class="text-xl font-bold text-brown-dark"><i class="fa fa-bullhorn mr-2"></i>Historical Announcements
             </h3>
             <button id="close-announcement" class="text-gray-400 hover:text-brown"><i
                 class="fa fa-times text-xl"></i></button>
