--- a/pages/customer.html
+++ b/pages/customer.html
@@ -168,9 +168,9 @@
                 class="border border-brown-light rounded px-3 py-1.5 text-sm focus:ring-1 focus:ring-brown outline-none"
                 id="price-filter">
                 <option value="all">All Prices</option>
-                <option value="0-20">¥0 - ¥20</option>
-                <option value="20-50">¥20 - ¥50</option>
-                <option value="50+">Above ¥50</option>
+                <option value="0-20">￡0 - ￡20</option>
+                <option value="20-50">￡20 - ￡50</option>
+                <option value="50+">Above ￡50</option>
               </select>
             </div>
             <!-- 任务 4：语言筛选 -->
@@ -385,7 +385,7 @@
             <button id="clear-cart"
               class="text-brown hover:text-brown-dark transition-colors flex items-center gap-1"><i
                 class="fa fa-trash-o"></i> Clear Cart</button>
-            <div class="text-lg text-brown-dark">Total: <span id="cart-total" class="font-bold text-brown">¥0.00</span>
+            <div class="text-lg text-brown-dark">Total: <span id="cart-total" class="font-bold text-brown">￡0.00</span>
             </div>
           </div>
           <button id="proceed-checkout"
@@ -441,7 +441,7 @@
           <div class="flex items-center gap-6">
             <div class="text-right">
               <p class="text-xs text-gray-500 uppercase">Total Amount</p>
-              <p id="combined-total-price" class="text-xl font-bold text-brown">¥0.00</p>
+              <p id="combined-total-price" class="text-xl font-bold text-brown">￡0.00</p>
             </div>
             <button id="merge-payment-btn" disabled
               class="bg-brown text-white px-8 py-3 rounded-xl font-bold hover:bg-brown-dark disabled:bg-gray-300 disabled:cursor-not-allowed transition-all shadow-md active:scale-95">
@@ -482,7 +482,7 @@
               </div>
               <h3 id="display-user-name" class="text-3xl font-serif font-bold">Customer</h3>
               <p class="text-white/70 mt-2 text-sm">Total Spent: <span id="member-total-spent"
-                  class="font-bold text-white">¥0.00</span></p>
+                  class="font-bold text-white">￡0.00</span></p>
             </div>
             <div class="flex items-center gap-8 bg-black/10 p-6 rounded-xl backdrop-blur-sm">
               <div class="text-center">
@@ -604,7 +604,7 @@
         </div>
         <div class="flex flex-col gap-4">
           <div class="flex items-baseline gap-2">
-            <span id="detail-book-price" class="text-4xl font-extrabold text-red-600">¥0.00</span>
+            <span id="detail-book-price" class="text-4xl font-extrabold text-red-600">￡0.00</span>
             <span class="text-xs text-gray-400">Regular Price</span>
           </div>
           <div class="flex gap-3">
@@ -664,7 +664,7 @@
         </div>
         <div class="flex justify-between items-center">
           <span class="font-medium">Total Amount</span>
-          <span id="payment-modal-total" class="text-2xl font-bold text-red-600">¥0.00</span>
+          <span id="payment-modal-total" class="text-2xl font-bold text-red-600">￡0.00</span>
         </div>
         <div class="space-y-3">
           <label class="text-sm font-bold text-brown-dark block">Select Payment Method</label>
