--- a/pages/manager.html
+++ b/pages/manager.html
@@ -240,7 +240,7 @@
                             <h4 class="font-medium">Top Performing Branch</h4>
                         </div>
                         <p class="text-2xl font-bold">Central Plaza</p>
-                        <p class="text-sm text-gray-600 mt-1">156 orders | ¥8,420 revenue</p>
+                        <p class="text-sm text-gray-600 mt-1">156 orders | ￡8,420 revenue</p>
                     </div>
 
                     <div class="bg-blue-50 p-4 rounded-lg">
