修复html路径问题

--- a/pages/finance.html
+++ b/pages/finance.html
@@ -201,7 +201,7 @@
                 localStorage.removeItem('current_user');
                 sessionStorage.clear();
                 // 使用 replace 替换历史记录，防止用户点“后退”按钮回来
-                window.location.replace('login.html');
+                window.location.replace('/pages/login.html');
             }
 
             // 3. 严格检查
