--- a/pages/staff.html
+++ b/pages/staff.html
@@ -18,20 +18,24 @@
         (function () {
             const token = localStorage.getItem('auth_token');
             const role = localStorage.getItem('user_role');
-            const currentPage = window.location.pathname.split('/').pop();
+            const path = window.location.pathname;
+            const marker = '/pages/';
+            const basePrefix = path.includes(marker) ? path.split(marker)[0] : '';
+            const pagesBase = `${basePrefix}/pages`;
+            const currentPage = path.split('/').pop();
 
             // 1. 基础检查：无 Token 直接回退
             if (!token) {
-                window.location.href = '/pages/login.html';
+                window.location.href = `${pagesBase}/login.html`;
                 return;
             }
 
             // 2. 角色越权检查 (可选增强)
             const roleRouteMap = {
-                'customer': '/pages/customer.html',
-                'staff': '/pages/staff.html',
-                'manager': '/pages/manager.html',
-                'finance': '/pages/finance.html'
+                'customer': `${pagesBase}/customer.html`,
+                'staff': `${pagesBase}/staff.html`,
+                'manager': `${pagesBase}/manager.html`,
+                'finance': `${pagesBase}/finance.html`
             };
 
             // 如果当前文件名不是该角色应属的页面，且不是 login.html，则强制纠正
@@ -40,7 +44,7 @@
                 localStorage.removeItem('user_role');
                 localStorage.removeItem('auth_token');
                 sessionStorage.removeItem('currentPage'); // 清除残留的页面ID
-                window.location.href = '/pages/login.html';
+                window.location.href = `${pagesBase}/login.html`;
             }
         })();
     </script>
